Day 8 completed: Implemented global exception handling with proper status codes and access control handling